# oneflow-api-cn

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  autograd.html  comm.html  cuda.html  dev-requirements.txt  distributed.html  env.html  functional.html  genindex.html  graph.html  image.html  index.html  linalg.html  module.html  nn.html  nn.init.html  objects.inv  one_embedding.html  oneflow.html  optim.html  placement.html  py-modindex.html  sbp.html  search.html  searchindex.js  setup.py  tensor.html  tensor_attributes.html  troubleshooting.html  utils.html
.github/workflows/: doctest.yml  main.yml  pub.yml
_sources/: functional.rst.txt  index.rst.txt  tensor.rst.txt
ci/: install.sh
docreset/: __init__.py
docs/: Makefile  output.txt  requirements.txt
docs/source/: conf.py  cuda.rst  distributed.rst  functional.rst  graph.rst  index.rst  one_embedding.rst  tensor_attributes.rst  utils.rst
docs/source/cn/: __init__.py  activation.py  activation_ops.py  adagrad.py  adam.py  adamw.py  amax.py  amin.py  arange.py  argsort.py  array_ops.py  as_tensor.py  autograd.py  autograd_function.py  autograd_mode.py  bmm.py  cast.py  chunk.py  comm.py  comparison.py  constant.py  conv.py  cosine_annealing_lr.py  cosine_decay_lr.py  cuda.py  dataset.py  einsum.py  env.py  erfinv.py  expand.py  exponential_lr.py  functional1.py  generator.py  graph.py  index_select.py  is_tensor.py  lamb.py  lambda_lr.py  linspace.py  logical_ops.py  (+43 more)
src/: docreset.cpp
tests/: test_docreset.py
